---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: ????
  Changes:
    - when a refuel station has no fuel signals, turn its lamp gray, not cyan
    - when enabling detailed messages, report if a station uses the default network id (not receiving a
      network id signal)
---------------------------------------------------------------------------------------------------
Version: 2.4.3
Date: 2025-11-17
  Bugfixes:
    - remove fuel station and depot status when a stop changes from a depot/fuel station to something else
---------------------------------------------------------------------------------------------------
Version: 2.4.2
Date: 2025-09-28
  Changes:
    - debug logging is now controlled by an int setting to provide different levels of logging.
  Bugfixes:
    - fix crash when another mod adds a temporary refueling record at the beginning of the schedule
    - make sure that any freshly minted train that gets sent to a depot for the first time really gets
      the wait condition for the depot. Reported by @mikegarrison on the forums
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2025-09-27
  Bugfixes:
    - fix a crash when using a depot or fuel station that is not connected to a rail (reported by @YenzRahbek on the forum)
    - fix a crash when reading schedule conditions does not contain a constant (reported by @Generalisator on the forum)
  Changes:
    - setting 'ltn-depot-fluid-cleaning' to -1 will always clean all fluids from the train
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: 2025-09-26
  Changes:
    - When updating the schedule, try to keep the depot stop valid all the time
    - Add setting to choose between refueling with an interrupt or dynamic (LTN controlled) refueling
    - Implement dynamic refueling (controlled by LTN)