@@ -5,6 +5,7 @@ Date: ????
     - when a refuel station has no fuel signals, turn its lamp gray, not cyan
     - when enabling detailed messages, report if a station uses the default network id (not receiving a
       network id signal)
+    - remove train limit from LTN stops and remove any signal to change train limits
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.3
 Date: 2025-11-17
